architect/internal/generated/project/project_parser.go
// Code generated from internal/infrastructure/antlr/grammars/Project.g4 by ANTLR 4.13.2. DO NOT EDIT.

package project // Project
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type ProjectParser struct {
	*antlr.BaseParser
}

var ProjectParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func projectParserInit() {
	staticData := &ProjectParserStaticData
	staticData.LiteralNames = []string{
		"", "'project'", "'version'", "'next_version'", "'services'", "'objects'",
		"'deployments'", "'{'", "'}'",
	}
	staticData.SymbolicNames = []string{
		"", "PROJECT", "VERSION", "NEXT_VERSION", "SERVICES", "OBJECTS", "DEPLOYMENTS",
		"LBRACE", "RBRACE", "IDENT", "STRING", "LINE_COMMENT", "BLOCK_COMMENT",
		"WS",
	}
	staticData.RuleNames = []string{
		"program", "projectDecl", "versionDecl", "versionBody", "nextVersionDecl",
		"servicesBlock", "objectsBlock", "deploymentsBlock", "fileRef",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// ProjectParserInit initializes any static state used to implement ProjectParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewProjectParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func ProjectParserInit() {
	staticData := &ProjectParserStaticData
	staticData.once.Do(projectParserInit)
}

// NewProjectParser produces a new parser instance for the optional input antlr.TokenStream.
func NewProjectParser(input antlr.TokenStream) *ProjectParser {
	ProjectParserInit()
	this := new(ProjectParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &ProjectParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "Project.g4"

	return this
}

// ProjectParser tokens.
const (
	ProjectParserEOF           = antlr.TokenEOF
	ProjectParserPROJECT       = 1
	ProjectParserVERSION       = 2
	ProjectParserNEXT_VERSION  = 3
	ProjectParserSERVICES      = 4
	ProjectParserOBJECTS       = 5
	ProjectParserDEPLOYMENTS   = 6
	ProjectParserLBRACE        = 7
	ProjectParserRBRACE        = 8
	ProjectParserIDENT         = 9
	ProjectParserSTRING        = 10
	ProjectParserLINE_COMMENT  = 11
	ProjectParserBLOCK_COMMENT = 12
	ProjectParserWS            = 13
)

// ProjectParser rules.
const (
	ProjectParserRULE_program          = 0
	ProjectParserRULE_projectDecl      = 1
	ProjectParserRULE_versionDecl      = 2
	ProjectParserRULE_versionBody      = 3
	ProjectParserRULE_nextVersionDecl  = 4
	ProjectParserRULE_servicesBlock    = 5
	ProjectParserRULE_objectsBlock     = 6
	ProjectParserRULE_deploymentsBlock = 7
	ProjectParserRULE_fileRef          = 8
)

// IProgramContext is an interface to support dynamic dispatch.
type IProgramContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ProjectDecl() IProjectDeclContext
	EOF() antlr.TerminalNode

	// IsProgramContext differentiates from other interfaces.
	IsProgramContext()
}

type ProgramContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProgramContext() *ProgramContext {
	var p = new(ProgramContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_program
	return p
}

func InitEmptyProgramContext(p *ProgramContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_program
}

func (*ProgramContext) IsProgramContext() {}

func NewProgramContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProgramContext {
	var p = new(ProgramContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProjectParserRULE_program

	return p
}

func (s *ProgramContext) GetParser() antlr.Parser { return s.parser }

func (s *ProgramContext) ProjectDecl() IProjectDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IProjectDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IProjectDeclContext)
}

func (s *ProgramContext) EOF() antlr.TerminalNode {
	return s.GetToken(ProjectParserEOF, 0)
}

func (s *ProgramContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProgramContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProgramContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ProjectVisitor:
		return t.VisitProgram(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ProjectParser) Program() (localctx IProgramContext) {
	localctx = NewProgramContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, ProjectParserRULE_program)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(18)
		p.ProjectDecl()
	}
	{
		p.SetState(19)
		p.Match(ProjectParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IProjectDeclContext is an interface to support dynamic dispatch.
type IProjectDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	PROJECT() antlr.TerminalNode
	IDENT() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllVersionDecl() []IVersionDeclContext
	VersionDecl(i int) IVersionDeclContext

	// IsProjectDeclContext differentiates from other interfaces.
	IsProjectDeclContext()
}

type ProjectDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyProjectDeclContext() *ProjectDeclContext {
	var p = new(ProjectDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_projectDecl
	return p
}

func InitEmptyProjectDeclContext(p *ProjectDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_projectDecl
}

func (*ProjectDeclContext) IsProjectDeclContext() {}

func NewProjectDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ProjectDeclContext {
	var p = new(ProjectDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProjectParserRULE_projectDecl

	return p
}

func (s *ProjectDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *ProjectDeclContext) PROJECT() antlr.TerminalNode {
	return s.GetToken(ProjectParserPROJECT, 0)
}

func (s *ProjectDeclContext) IDENT() antlr.TerminalNode {
	return s.GetToken(ProjectParserIDENT, 0)
}

func (s *ProjectDeclContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(ProjectParserLBRACE, 0)
}

func (s *ProjectDeclContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(ProjectParserRBRACE, 0)
}

func (s *ProjectDeclContext) AllVersionDecl() []IVersionDeclContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVersionDeclContext); ok {
			len++
		}
	}

	tst := make([]IVersionDeclContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVersionDeclContext); ok {
			tst[i] = t.(IVersionDeclContext)
			i++
		}
	}

	return tst
}

func (s *ProjectDeclContext) VersionDecl(i int) IVersionDeclContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVersionDeclContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVersionDeclContext)
}

func (s *ProjectDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ProjectDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ProjectDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ProjectVisitor:
		return t.VisitProjectDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ProjectParser) ProjectDecl() (localctx IProjectDeclContext) {
	localctx = NewProjectDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, ProjectParserRULE_projectDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(21)
		p.Match(ProjectParserPROJECT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(22)
		p.Match(ProjectParserIDENT)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(23)
		p.Match(ProjectParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(25)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == ProjectParserVERSION {
		{
			p.SetState(24)
			p.VersionDecl()
		}

		p.SetState(27)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(29)
		p.Match(ProjectParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVersionDeclContext is an interface to support dynamic dispatch.
type IVersionDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	VERSION() antlr.TerminalNode
	STRING() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllVersionBody() []IVersionBodyContext
	VersionBody(i int) IVersionBodyContext

	// IsVersionDeclContext differentiates from other interfaces.
	IsVersionDeclContext()
}

type VersionDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVersionDeclContext() *VersionDeclContext {
	var p = new(VersionDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_versionDecl
	return p
}

func InitEmptyVersionDeclContext(p *VersionDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_versionDecl
}

func (*VersionDeclContext) IsVersionDeclContext() {}

func NewVersionDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VersionDeclContext {
	var p = new(VersionDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProjectParserRULE_versionDecl

	return p
}

func (s *VersionDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *VersionDeclContext) VERSION() antlr.TerminalNode {
	return s.GetToken(ProjectParserVERSION, 0)
}

func (s *VersionDeclContext) STRING() antlr.TerminalNode {
	return s.GetToken(ProjectParserSTRING, 0)
}

func (s *VersionDeclContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(ProjectParserLBRACE, 0)
}

func (s *VersionDeclContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(ProjectParserRBRACE, 0)
}

func (s *VersionDeclContext) AllVersionBody() []IVersionBodyContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVersionBodyContext); ok {
			len++
		}
	}

	tst := make([]IVersionBodyContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVersionBodyContext); ok {
			tst[i] = t.(IVersionBodyContext)
			i++
		}
	}

	return tst
}

func (s *VersionDeclContext) VersionBody(i int) IVersionBodyContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVersionBodyContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVersionBodyContext)
}

func (s *VersionDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VersionDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VersionDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ProjectVisitor:
		return t.VisitVersionDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ProjectParser) VersionDecl() (localctx IVersionDeclContext) {
	localctx = NewVersionDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, ProjectParserRULE_versionDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(31)
		p.Match(ProjectParserVERSION)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(32)
		p.Match(ProjectParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(33)
		p.Match(ProjectParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(37)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&120) != 0 {
		{
			p.SetState(34)
			p.VersionBody()
		}

		p.SetState(39)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(40)
		p.Match(ProjectParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IVersionBodyContext is an interface to support dynamic dispatch.
type IVersionBodyContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ServicesBlock() IServicesBlockContext
	ObjectsBlock() IObjectsBlockContext
	DeploymentsBlock() IDeploymentsBlockContext
	NextVersionDecl() INextVersionDeclContext

	// IsVersionBodyContext differentiates from other interfaces.
	IsVersionBodyContext()
}

type VersionBodyContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyVersionBodyContext() *VersionBodyContext {
	var p = new(VersionBodyContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_versionBody
	return p
}

func InitEmptyVersionBodyContext(p *VersionBodyContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_versionBody
}

func (*VersionBodyContext) IsVersionBodyContext() {}

func NewVersionBodyContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *VersionBodyContext {
	var p = new(VersionBodyContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProjectParserRULE_versionBody

	return p
}

func (s *VersionBodyContext) GetParser() antlr.Parser { return s.parser }

func (s *VersionBodyContext) ServicesBlock() IServicesBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IServicesBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IServicesBlockContext)
}

func (s *VersionBodyContext) ObjectsBlock() IObjectsBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IObjectsBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IObjectsBlockContext)
}

func (s *VersionBodyContext) DeploymentsBlock() IDeploymentsBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeploymentsBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeploymentsBlockContext)
}

func (s *VersionBodyContext) NextVersionDecl() INextVersionDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INextVersionDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INextVersionDeclContext)
}

func (s *VersionBodyContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *VersionBodyContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *VersionBodyContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ProjectVisitor:
		return t.VisitVersionBody(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ProjectParser) VersionBody() (localctx IVersionBodyContext) {
	localctx = NewVersionBodyContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, ProjectParserRULE_versionBody)
	p.SetState(46)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case ProjectParserSERVICES:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(42)
			p.ServicesBlock()
		}

	case ProjectParserOBJECTS:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(43)
			p.ObjectsBlock()
		}

	case ProjectParserDEPLOYMENTS:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(44)
			p.DeploymentsBlock()
		}

	case ProjectParserNEXT_VERSION:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(45)
			p.NextVersionDecl()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// INextVersionDeclContext is an interface to support dynamic dispatch.
type INextVersionDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	NEXT_VERSION() antlr.TerminalNode
	STRING() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllVersionBody() []IVersionBodyContext
	VersionBody(i int) IVersionBodyContext

	// IsNextVersionDeclContext differentiates from other interfaces.
	IsNextVersionDeclContext()
}

type NextVersionDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyNextVersionDeclContext() *NextVersionDeclContext {
	var p = new(NextVersionDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_nextVersionDecl
	return p
}

func InitEmptyNextVersionDeclContext(p *NextVersionDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_nextVersionDecl
}

func (*NextVersionDeclContext) IsNextVersionDeclContext() {}

func NewNextVersionDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *NextVersionDeclContext {
	var p = new(NextVersionDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProjectParserRULE_nextVersionDecl

	return p
}

func (s *NextVersionDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *NextVersionDeclContext) NEXT_VERSION() antlr.TerminalNode {
	return s.GetToken(ProjectParserNEXT_VERSION, 0)
}

func (s *NextVersionDeclContext) STRING() antlr.TerminalNode {
	return s.GetToken(ProjectParserSTRING, 0)
}

func (s *NextVersionDeclContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(ProjectParserLBRACE, 0)
}

func (s *NextVersionDeclContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(ProjectParserRBRACE, 0)
}

func (s *NextVersionDeclContext) AllVersionBody() []IVersionBodyContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IVersionBodyContext); ok {
			len++
		}
	}

	tst := make([]IVersionBodyContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IVersionBodyContext); ok {
			tst[i] = t.(IVersionBodyContext)
			i++
		}
	}

	return tst
}

func (s *NextVersionDeclContext) VersionBody(i int) IVersionBodyContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVersionBodyContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVersionBodyContext)
}

func (s *NextVersionDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *NextVersionDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *NextVersionDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ProjectVisitor:
		return t.VisitNextVersionDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ProjectParser) NextVersionDecl() (localctx INextVersionDeclContext) {
	localctx = NewNextVersionDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, ProjectParserRULE_nextVersionDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(48)
		p.Match(ProjectParserNEXT_VERSION)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(49)
		p.Match(ProjectParserSTRING)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(50)
		p.Match(ProjectParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(54)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&120) != 0 {
		{
			p.SetState(51)
			p.VersionBody()
		}

		p.SetState(56)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(57)
		p.Match(ProjectParserRBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IServicesBlockContext is an interface to support dynamic dispatch.
type IServicesBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SERVICES() antlr.TerminalNode
	LBRACE() antlr.TerminalNode
	RBRACE() antlr.TerminalNode
	AllFileRef() []IFileRefContext
	FileRef(i int) IFileRefContext

	// IsServicesBlockContext differentiates from other interfaces.
	IsServicesBlockContext()
}

type ServicesBlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyServicesBlockContext() *ServicesBlockContext {
	var p = new(ServicesBlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_servicesBlock
	return p
}

func InitEmptyServicesBlockContext(p *ServicesBlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = ProjectParserRULE_servicesBlock
}

func (*ServicesBlockContext) IsServicesBlockContext() {}

func NewServicesBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ServicesBlockContext {
	var p = new(ServicesBlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = ProjectParserRULE_servicesBlock

	return p
}

func (s *ServicesBlockContext) GetParser() antlr.Parser { return s.parser }

func (s *ServicesBlockContext) SERVICES() antlr.TerminalNode {
	return s.GetToken(ProjectParserSERVICES, 0)
}

func (s *ServicesBlockContext) LBRACE() antlr.TerminalNode {
	return s.GetToken(ProjectParserLBRACE, 0)
}

func (s *ServicesBlockContext) RBRACE() antlr.TerminalNode {
	return s.GetToken(ProjectParserRBRACE, 0)
}

func (s *ServicesBlockContext) AllFileRef() []IFileRefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IFileRefContext); ok {
			len++
		}
	}

	tst := make([]IFileRefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IFileRefContext); ok {
			tst[i] = t.(IFileRefContext)
			i++
		}
	}

	return tst
}

func (s *ServicesBlockContext) FileRef(i int) IFileRefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFileRefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFileRefContext)
}

func (s *ServicesBlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ServicesBlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ServicesBlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case ProjectVisitor:
		return t.VisitServicesBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *ProjectParser) ServicesBlock() (localctx IServicesBlockContext) {
	localctx = NewServicesBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, ProjectParserRULE_servicesBlock)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(59)
		p.Match(ProjectParserSERVICES)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(60)
		p.Match(ProjectParserLBRACE)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(64)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == ProjectParserSTRING {
		{
			p.SetState(61)
			p.FileRef()
		}
